# MyTodos

./: .containerignore  .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  AUTO_PAUSE_IMPLEMENTATION.md  CLAUDE.md  Dockerfile.linux  GEMINI.md  create-release.ps1  implementation_plan.md  package-lock.json  package.json  task.md  vitest.config.ts  walkthrough.md
.agents/skills/stats-integration/: SKILL.md
.agents/skills/tauri-async-windows/: SKILL.md
.agents/skills/user-workflow/: SKILL.md
.claude/: settings.local.json
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion_process.md
coverage/: coverage-final.json  index.html
coverage/components/calendar/: CalendarDay.svelte.html  CalendarDayCell.svelte.html  CalendarHeader.svelte.html  CalendarMonth.svelte.html  CalendarTabView.svelte.html  CalendarToggle.svelte.html  CalendarView.svelte.html  CalendarWeek.svelte.html  TimeEntryPanel.svelte.html  index.html
coverage/components/common/: ContextMenu.svelte.html  Modal.svelte.html  TimeDisplay.svelte.html  UpdateNotification.svelte.html  index.html
coverage/components/layout/: AppHeader.svelte.html  CollapseHandle.svelte.html  index.html
coverage/components/settings/: SettingsView.svelte.html  index.html
coverage/components/stats/: StatsView.svelte.html  index.html
coverage/services/: db.ts.html  index.html  time-parser.ts.html
coverage/stores/: calendar.svelte.ts.html  index.html  projects.svelte.ts.html  tasks.svelte.ts.html  timer.svelte.ts.html  ui.svelte.ts.html
coverage/types/: calendar.ts.html  index.html
docs/: mytodos-mcp.md
ideas/: calendar_ui_improvements.md  github-workflow-optimizations.md
maintainability/: walkthrough.md
scripts/: build.ps1  setup-env.ps1  sign-release.ps1
src/: app.d.ts
src-tauri/: 2  Cargo.toml  build.rs  check.txt  errors.json  rust_errors.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  startup.rs  tray.rs  window_lifecycle.rs
src-tauri/src/commands/: autostart.rs  backup.rs  calendar.rs  common.rs  google_calendar.rs  mod.rs  projects.rs  sections.rs  tasks.rs  time_entries.rs  time_stats.rs  timer.rs  window.rs  window_tracking.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  schema.rs
src-tauri/src/events/: linux.rs  macos.rs  mod.rs  system_events.rs  windows.rs
src-tauri/src/google/: calendar_api.rs  mod.rs  oauth.rs  sync.rs  token_store.rs
src-tauri/src/services/: backup_service.rs  mod.rs  tasks_service.rs  timer_service.rs  window_tracking_service.rs
src-tauri/tests/: break_tracking_visibility_tests.rs  crud_tests.rs  time_entries_tests.rs  time_stats_tests.rs  timer_tests.rs  window_dock_preference_tests.rs  window_tracking_tests.rs
src-tauri/tests/common/: mod.rs
src/lib/components/calendar/: CalendarDay.svelte  CalendarDayCell.svelte  CalendarDeadline.svelte  CalendarHeader.svelte  CalendarMonth.svelte  CalendarSkeleton.svelte  CalendarTabView.svelte  CalendarToggle.svelte  CalendarView.svelte  CalendarWeek.svelte  DayTaskList.svelte  TimeEntryPanel.svelte
src/lib/components/common/: BreakView.svelte  ContextMenu.svelte  DateTimePicker.svelte  Modal.svelte  TimeDisplay.svelte  UpdateNotification.svelte
src/lib/components/layout/: AppHeader.svelte  CollapseHandle.svelte
src/lib/components/modals/: PageModalHost.svelte
src/lib/components/projects/: ProjectListSection.svelte
src/lib/controllers/: page-interactions.svelte.ts
src/lib/services/: db.ts  time-parser.test.ts  time-parser.ts
src/lib/stores/: afk-categories.svelte.ts  backup.svelte.ts  calendar.svelte.ts  google-calendar.svelte.ts  projects.svelte.ts  tasks.svelte.ts  timer-break-reminders.svelte.ts  timer-events.ts  timer-runtime-utils.test.ts  timer-runtime-utils.ts  timer-runtime.svelte.ts  timer.svelte.ts  ui.svelte.ts  window-tracking.svelte.ts
src/lib/styles/: global.css  theme.css
src/lib/test-utils/: tauri-mock.ts
src/lib/types/: calendar.ts
src/routes/: +page.svelte
src/routes/break/: +page.svelte
static/: break.html
~/.tauri/: myapp.key.pub
(+5 files in other folders)
