[package]
name = "my-todos"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_todos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "0.1.1", features = [] }

[dependencies]
tauri = { version = "0.1.1", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-autostart = "2.5.1"
serde = { version = "0.1.1", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.1.1", features = ["bundled"] }
chrono = "0.4.43"
anyhow = "1.0.100"
tokio = { version = "0.1.1", features = ["sync"] }
parking_lot = "0.12.5"
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

