[package]
name = "my-todos"
version = "0.1.50"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_todos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-autostart = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4.43"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = [
    "sync",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
] }
parking_lot = "0.12.5"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.0"
